# AudiobookMaker

./: .gitignore  AudiobookMaker_Colab.ipynb  README.md  app.py  audiobook_factory.py  cli.py  install.bat  install.sh  requirements.txt  run.bat  run.sh  start_api.py
api/: server.py  worker.py
audiobook_factory/: audio_processor.py  config.py  ebook_importer.py  extractor_engine.py  ffmpeg_utils.py  filename_sanitizer.py  main.py  pipeline.py  story_analyzer.py  text_extractor.py  text_processing.py  utils.py  voice_preprocessor.py
audiobook_factory/tts_providers/: __init__.py  base_tts_provider.py  qwen_provider.py
audiobook_rust/: Cargo.toml  pyproject.toml
audiobook_rust/src/: lib.rs
audiobook_rust/src/audio/: master.rs  mod.rs
audiobook_rust/src/text/: mod.rs  normalize.rs  splitter.rs
