[package]
name = "audiobook_rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "audiobook_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
regex = "1.10"
unicode-segmentation = "1.11"
hound = "3.5"
ebur128 = "0.1.8"
mp3lame-encoder = "0.1.1"
rayon = "1.10"
